Tried fixing the code x overflow but it doesnt work

--- a/src/pages/Editor/index.scss
+++ b/src/pages/Editor/index.scss
@@ -1,18 +1,29 @@
 .editor {
-    width: 100%;
-    height: 100%;
-    background-color: #161616;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
+  width: calc(100vw - 300px);
+  height: calc(100vh - 40px);
+  background-color: #161616;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
 }
 
 .editor-container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    max-height: calc(100vh - 40px - 40px);
-    overflow-y: scroll;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  max-height: calc(100vh - 40px - 40px);
+  max-width: calc(100vw - 300px);
+  overflow: auto;
+  flex: 1; /* Fill available space */
+}
+
+.editor-content {
+  white-space: pre-wrap;
+  padding-left: 5px;
+  width: 100%;
+  height: auto;
+  overflow: visible;
+  flex: 1;
 }
 
 .editor-container::-webkit-scrollbar {
@@ -34,19 +45,10 @@
   background: transparent;                       /* or use rgba(0,0,0,0.1) for faint track */
 }
 
-.editor-content {
-    white-space: pre-wrap;
-    padding-left: 5px;
-    width: 100%;
-    max-height: 100%;
-    height: fit-content;
-}
-
 .lines-counter {
     display: flex;
     flex-direction: column;
     width: 50px;
-    height: fit-content;
     text-align: center;
     border-right: 1px solid #444;
     user-select: none;
